fix css rule from overflow y to overflow x

--- a/openscholar/themes/hwpi_vibrant/css/hwpi_vibrant.css
+++ b/openscholar/themes/hwpi_vibrant/css/hwpi_vibrant.css
@@ -3,7 +3,7 @@ html,body {
     color: #1e1e1e;
 }
 body.front {
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 /** * - Leave this until after we know about the slideshow issue: https: //github.com/openscholar/openscholar/issues/1646 * - Set to full width for vibrant, we need to set the gradient */#columns {
     margin-left: auto;
